--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
     </div><!-- /input-group -->
   </div>
 	
-	<div id="map"></div>
-	<div class="display row"></div>
-	
+<div id="banner"></div>
+
+		<div class="display">
+			<div id="map" class="display1 col-xs-6"></div>
+		
+			<div class="display2 col-xs-6"></div>
+		</div>
+
+	</div>
 	<!-- local javascript files -->
 	<script type="text/javascript" src="assets/javascript/app.js"></script>	
 
