Added weather fluff for demo only

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
     </div><!-- /input-group -->
   </div>
 	
-<div id="banner"></div>
-
-		<div class="display">
-			<div id="map" class="display1 col-xs-6"></div>
-		
-			<div class="display2 col-xs-6"></div>
+	<div id="banner">
+		<div class="weatherWrap col-xs-10">
+			<img class="weather img-responsive" src="assets/images/placeholderWeather001.png"></img>
 		</div>
+	</div>
+
+	<div class="display">
+		<div id="map" class="display1 col-xs-6"></div>
+	
+		<div class="display2 col-xs-6"></div>
+	</div>
 
 	</div>
 	<!-- local javascript files -->
